--- a/5.1_clubs.rmd
+++ b/5.1_clubs.rmd
@@ -59,16 +59,23 @@ Row {.tabset .tabset-fade .tabset-pills data-height="400"}
 ```{r}
 clubreg <- as.data.frame(t(club_reg[119,3:15]))
 clubreg$region <- t(as.data.frame(levels(lic_reg)[4:16]))
-clubreg <- clubreg %>% rownames_to_column(var="REG") %>%
-                 left_join(.,regwgs@data %>% dplyr::select(REG=INSEE_REG,pop) ,
-                           by="REG" )    %>%
-                  adorn_totals("row",name = "FR") %>%
-                  mutate(txclub=round(10000*V1/pop,1)) 
+clubreg <- clubreg %>% 
+              rownames_to_column(var="REG") %>%
+              left_join(.,regwgs@data %>%
+                          dplyr::select(REG=INSEE_REG,pop) ,
+                        by="REG" )  %>%
+              adorn_totals("row",name = "FR") %>%
+              mutate(txclub=round(10000*V1/pop,1)) 
+
 clubreg[14,3] <- "France"
 
-hchart(clubreg %>% slice(-14) %>% arrange(desc(V1)),"bar",
-       hcaes(x=reorder(region,V1),y=V1,color=ifelse(REG=="27","#6a5acd","#ffd700") ), 
-       showInLegend = F, name = "Clubs", pointWidth = 20) %>%
+hchart(clubreg %>% 
+         slice(-14) %>% 
+         arrange(desc(V1)),
+"bar", hcaes(x=reorder(region,V1),y=V1,
+             color=ifelse(REG=="27","#6a5acd","#ffd700") ), 
+       showInLegend = F, pointWidth = 20,
+       name = "Clubs" ) %>%
    hc_xAxis(title=list(text="Région")) %>%
    hc_yAxis(title=list(text="Nombre de clubs")) %>%
    hc_add_theme(thm) 
@@ -80,11 +87,13 @@ hchart(clubreg %>% slice(-14) %>% arrange(desc(V1)),"bar",
 
 ```{r}
 
-hchart(clubreg %>% arrange(desc(txclub)),"bar",
-       hcaes(x=reorder(region,txclub),y=txclub,
-             color=ifelse(REG=="27","#6a5acd",
-                   ifelse(REG=="FR","#ff7f50","#ffd700") ) ) , 
-       showInLegend = F, name = "Taux de clubs", pointWidth = 10) %>%
+hchart(clubreg %>% 
+         arrange(desc(txclub)),
+"bar",hcaes(x=reorder(region,txclub),y=txclub,
+            color=ifelse(REG=="27","#6a5acd",
+                  ifelse(REG=="FR","#ff7f50","#ffd700") ) ) , 
+       showInLegend = F,  pointWidth = 10,
+       name = "Taux de clubs") %>%
     hc_xAxis(title=list(text="Région")) %>%
     hc_yAxis(title=list(text="Taux de clubs (/10 000)")) %>%
     hc_add_theme(thm) 
@@ -95,32 +104,35 @@ hchart(clubreg %>% arrange(desc(txclub)),"bar",
 
 ```{r}
 sportreg <- as.data.frame(t(club_reg)) %>%
-            select(clubs_tot=V119) %>% 
-            mutate(clubs_tot=as.numeric(clubs_tot)) %>%
-            rownames_to_column("INSEE_REG") %>% 
-            slice (3:15)
+              select(clubs_tot=V119) %>% 
+              mutate(clubs_tot=as.numeric(clubs_tot)) %>%
+              rownames_to_column("INSEE_REG") %>% 
+              slice (3:15)
+
 cartosportreg <- sp::merge(regwgs,sportreg,by="INSEE_REG")
 
 leaflet(cartosportreg) %>% 
   addProviderTiles(providers$CartoDB.Positron) %>% 
   setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
-  addPolygons(weight=2,opacity = 0.6,color = "#2F4F4F",
+  addPolygons(color = "#2F4F4F", weight=2, opacity = 0.6,
               fill=F, smoothFactor = 2 ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,
-              color="#9370DB",weight = 5, opacity = 1, smoothFactor = 5) %>%
+  addPolygons(data=reg27carto, group  = "BFC",
+              color="#9370DB",weight = 5, opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
   addCircles(centroid(cartosportreg)[,1],centroid(cartosportreg)[,2],
-             group = "region", radius=~500*clubs_tot^(1/2),
-             fillColor = ~pal2(10000*cartosportreg$clubs_tot/cartosportreg$pop),
-             weight=4, color = "#4169E1", opacity = 0.8,
-             fillOpacity = 0.8,
-             highlight = highlightOptions (fillOpacity =  0.1,
-             weight = 5,   color = "#00FFFF"),
+             group = "region", 
+             radius=~500*clubs_tot^(1/2),
+             fillColor = ~pal2(10000*cartosportreg$clubs_tot/cartosportreg$pop), fillOpacity = 0.8,
+             color = "#4169E1", weight=4,  opacity = 0.8,
+             highlight = highlightOptions (
+                         color = "#00FFFF", weight = 5,fillOpacity =  0.1),
              popup = popupTable(cartosportreg@data %>% 
-                                   select(Région=LIBGEO,pop,clubs_tot) %>%
+                                  select(Région=LIBGEO,pop,clubs_tot) %>%
                                   mutate(`Taux de clubs`=10000*clubs_tot/pop),
-                                 feature.id=F,row.numbers = F)) %>%
-addLegend( position = "bottomright",pal = pal2 ,title = "taux de clubs sportifs",
-           values = 10000*(cartosportreg$clubs_tot/cartosportreg$pop) )
+                                feature.id=F,row.numbers = F)) %>%
+  addLegend( pal = pal2 , values = 10000*(cartosportreg$clubs_tot/cartosportreg$pop),
+             position = "bottomright", title = "taux de clubs sportifs" )
+
 ```
 
 Row {.tabset .tabset-fade .tabset-pills data-height="400"}
@@ -131,50 +143,57 @@ Row {.tabset .tabset-fade .tabset-pills data-height="400"}
 **La moitié des clubs sont affiliés à une fédération unisport olympique.**
 
 ```{r}
-club_reg %>%  dplyr::select(2,"11":"94",France="...22") %>%
-    slice(39,91,118,119) %>%
-    pivot_longer(-`Codes régions`, 'variable', 'value') %>%
-    pivot_wider(names_from =  `Codes régions`,variable) %>%
-    mutate(region=t(as.data.frame(levels(club_reg)[c(4:16,22)]))) %>%
-   dplyr::select(1,6,2:5) %>% dplyr::rename("Total clubs"="NA",REG=variable) %>%
-  left_join( lic_reg %>% dplyr::select(2,"11":"94",France="...22") %>%
-    slice(117) %>%
-    pivot_longer(-`Codes régions`, 'variable', 'value') %>%
-    pivot_wider(variable, names_from =  `Codes régions`) %>%
-   dplyr::select(REG=1,licences=2),by="REG"   ) %>%
-
-
+club_reg %>%  
+  dplyr::select(2,"11":"94",France="...22") %>%
+  slice(39,91,118,119) %>%
+  pivot_longer(-`Codes régions`, 'variable', 'value') %>%
+  pivot_wider(names_from =  `Codes régions`,variable) %>%
+  mutate(region=t(as.data.frame(levels(club_reg)[c(4:16,22)]))) %>%
+  dplyr::select(1,6,2:5) %>% 
+  dplyr::rename("Total clubs"="NA",REG=variable) %>%
+  left_join( lic_reg %>% 
+               dplyr::select(2,"11":"94",France="...22") %>%
+               slice(117) %>%
+               pivot_longer(-`Codes régions`, 'variable', 'value') %>%
+               pivot_wider(variable, names_from =  `Codes régions`) %>%
+               dplyr::select(REG=1,licences=2),by="REG"   ) %>%
   mutate(`licences par club` = color_bar('lightgreen')
-          (digits(licences / `Total clubs` ,1,decimal.mark=","))) %>%
-  rename(`unisport olympique`="Total fédérations unisport olympiques",`unisport non olympique`="Total fédérations unisport non olympiques", multisports=`Total fédérations multisports` ) %>%
+        (digits(licences / `Total clubs` ,1,decimal.mark=","))) %>%
+  rename(`unisport olympique`="Total fédérations unisport olympiques",
+         `unisport non olympique`="Total fédérations unisport non olympiques", 
+         multisports=`Total fédérations multisports` ) %>%
+  
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="rcrrrrrl",
-      escape = F) %>% 
+      align="rcrrrrrl", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  column_spec(6, bold=T) %>%
-  row_spec(3,background = "#E0FFFF75",  bold = T , color = "steelblue") %>%
+  column_spec(6, 
+              bold=T) %>%
+  row_spec(3,
+           background = "#E0FFFF75",  bold = T , color = "steelblue") %>%
   add_header_above(c( " "=2,"Fédérations"=3," "=3) ) %>%
-  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", general_title = "Source : ",
-            footnote_as_chunk = T) %>%
-   scroll_box(height = "350px") 
+  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", 
+           general_title = "Source : ",
+           footnote_as_chunk = T) %>%
+  scroll_box(height = "350px") 
 
 ```
 
 ### Répartition des clubs par type de fédération
 
 ```{r, plotly=T}
-hchart( club_reg %>%  dplyr::select(2,"11":"94"
-                                      #,France="...22"
-                                      ) %>%
-    slice(39,91,118,119) %>%
-    pivot_longer(-`Codes régions`, 'REG') %>% 
-      rename(type_fede=`Codes régions`,clubs=value) %>%
-      filter(!is.na(type_fede)) %>%
-      left_join(.,appartenance %>% filter(NIVGEO=="REG") %>%
-                  select(CODGEO,region=LIBGEO),by=c("REG"="CODGEO") ) , 
-    "bar",  hcaes(x = fct_rev(region), y = clubs, group = type_fede) ,
-      stacking = "normal" ,
-      showInLegend = T,  pointWidth =20) %>%
+hchart( club_reg %>%  
+          dplyr::select(2,"11":"94") %>% #,France="...22") 
+          slice(39,91,118,119) %>%
+          pivot_longer(-`Codes régions`, 'REG') %>% 
+          rename(type_fede=`Codes régions`,clubs=value) %>%
+          filter(!is.na(type_fede)) %>%
+          left_join(.,appartenance %>% 
+                      filter(NIVGEO=="REG") %>%
+                      select(CODGEO,region=LIBGEO),
+                    by=c("REG"="CODGEO") ) , 
+"bar",  hcaes(x = fct_rev(region), y = clubs, group = type_fede) ,
+        stacking = "normal" ,
+        showInLegend = T,  pointWidth =20) %>%
    hc_xAxis(title=list(text="Région")) %>%
    hc_yAxis(title=list(text="Nombre de clubs")) %>%
    hc_add_theme(thm) 
@@ -185,16 +204,17 @@ hchart( club_reg %>%  dplyr::select(2,"11":"94"
 ### Structure des clubs par type de fédération
 
 ```{r, plotly=T}
-hchart( club_reg %>%  dplyr::select(2,"11":"94"
-                                      #,France="...22"
-                                      ) %>%
-    slice(39,91,118,119) %>%
-    pivot_longer(-`Codes régions`, 'REG') %>% 
-      rename(type_fede=`Codes régions`,clubs=value) %>%
-      filter(!is.na(type_fede)) %>%
-      left_join(.,appartenance %>% filter(NIVGEO=="REG") %>%
-                    select(CODGEO,region=LIBGEO),by=c("REG"="CODGEO") ) , 
-    "bar",  hcaes(x = fct_rev(region), y = clubs, group = type_fede) ,
+hchart( club_reg %>%  
+          dplyr::select(2,"11":"94" ) %>% #,France="...22"
+          slice(39,91,118,119) %>%
+          pivot_longer(-`Codes régions`, 'REG') %>% 
+          rename(type_fede=`Codes régions`,clubs=value) %>%
+          filter(!is.na(type_fede)) %>%
+          left_join(.,appartenance %>% 
+                      filter(NIVGEO=="REG") %>%
+                      select(CODGEO,region=LIBGEO),
+                    by=c("REG"="CODGEO") ) , 
+  "bar",hcaes(x = fct_rev(region), y = clubs, group = type_fede) ,
       stacking = "percent" ,
       showInLegend = T,  pointWidth =20) %>%
    hc_xAxis(title=list(text="Région")) %>%
@@ -222,25 +242,30 @@ club_reg %>%
   arrange (desc(France)) %>% 
   bind_rows(club_reg %>% 
               dplyr::select(1:2,"11":"94",France="...22") %>% 
-              rename("Code fédération"="...1","Fédération"="Codes régions") %>% slice(39) ) %>%
+              rename("Code fédération"="...1","Fédération"="Codes régions") %>% 
+              slice(39) ) %>%
   left_join(lic_reg %>% 
               dplyr::select(1,Licences="...22") %>% 
               rename("Code fédération"="...1") %>%
-              slice(2:39)  ,by="Code fédération" )  %>%
+              slice(2:39)  ,
+            by="Code fédération" )  %>%
   mutate(`licences/clubs` = color_bar('lightgreen')
         (digits(Licences / France ,1,decimal.mark=","))) %>%
   
   
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="clrrrrrrrrrrrrrrrl",
-      escape = F) %>% 
+      align="clrrrrrrrrrrrrrrrl", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
   add_header_above(c(" "=2,"Code région"=13," "=3) )%>%
-  column_spec(5, bold=T, background = "#E0FFFF75",  color = "steelblue") %>%
-  column_spec(16, bold=T) %>%
-  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", general_title = "Source : ",
-           number = c("F= Fédération \n","FF = Fédération Française"), footnote_as_chunk = T) %>%
-   scroll_box(height = "400px") 
+  column_spec(5, 
+              bold=T, background = "#E0FFFF75",  color = "steelblue") %>%
+  column_spec(16, 
+              bold=T) %>%
+  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", 
+           general_title = "Source : ",
+           number = c("F= Fédération \n","FF = Fédération Française"), 
+           footnote_as_chunk = T) %>%
+  scroll_box(height = "400px") 
 
 ```
 
@@ -249,11 +274,12 @@ club_reg %>%
 hchart(club_reg  %>% 
          select(fede=2,bfc="27",FR="...22") %>% 
          slice(2:38) %>%
-         mutate(txBFC=100*bfc/sum(bfc,na.rm=T), txFrance=100*FR/sum(FR,na.rm=T) ) %>% 
+         mutate(txBFC=100*bfc/sum(bfc,na.rm=T), 
+                txFrance=100*FR/sum(FR,na.rm=T) ) %>% 
          select(-2,-3) %>% 
          arrange(desc(txBFC))  %>%
          pivot_longer(!fede ,names_to = "REG") ,
-       "treemap", hcaes(x=fede, group = REG, value=round(value,1)  ),
+"treemap", hcaes(x=fede, group = REG, value=round(value,1)  ),
         color = c("#1a6ecc70", "#90ed7d60" )  )%>%
   hc_legend(title=list(text="Clic pour voir France ou BFC" )) %>%
   hc_add_theme(thm) 
@@ -272,7 +298,8 @@ lic_reg[91,1] <- "total"
 club_reg %>%  
   dplyr::select(1:2,"11":"94",France="...22") %>% 
   rename("Code fédération"="...1","Fédération"="Codes régions") %>%
-  slice(41:90)  %>% arrange (desc(France)) %>% 
+  slice(41:90)  %>% 
+  arrange (desc(France)) %>% 
   bind_rows(club_reg %>% 
               dplyr::select(1:2,"11":"94",France="...22") %>% 
               rename("Code fédération"="...1","Fédération"="Codes régions") %>% 
@@ -286,14 +313,17 @@ club_reg %>%
         (digits(Licences / France ,1,decimal.mark=",")))  %>%
   
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="clrrrrrrrrrrrrrrrl",
-      escape = F) %>% 
+      align="clrrrrrrrrrrrrrrrl", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
   add_header_above(c(" "=2,"Code région"=13," "=3) )%>%
-  column_spec(5, bold=T, background = "#E0FFFF75",  color = "steelblue") %>%
-  column_spec(16, bold=T) %>%
-  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", general_title = "Source : ",
-           number = c("F= Fédération \n","FF = Fédération Française"), footnote_as_chunk = T) %>%
+  column_spec(5, 
+              bold=T, background = "#E0FFFF75",  color = "steelblue") %>%
+  column_spec(16, 
+              bold=T) %>%
+  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", 
+           general_title = "Source : ",
+           number = c("F= Fédération \n","FF = Fédération Française"), 
+           footnote_as_chunk = T) %>%
   scroll_box(height = "400px") 
 
 ```
@@ -303,10 +333,11 @@ club_reg %>%
 hchart(club_reg  %>% 
          select(fede=2,bfc="27",FR="...22") %>% 
          slice(41:90) %>%
-         mutate(txBFC=100*bfc/sum(bfc,na.rm=T), txFrance=100*FR/sum(FR,na.rm=T) ) %>% 
+         mutate(txBFC=100*bfc/sum(bfc,na.rm=T), 
+                txFrance=100*FR/sum(FR,na.rm=T) ) %>% 
          select(-2,-3) %>% arrange(desc(txBFC))  %>%
          pivot_longer(!fede ,names_to = "REG")  ,
-       "treemap",  hcaes(x=fede, group = REG, value=round(value,1)  ),
+"treemap",  hcaes(x=fede, group = REG, value=round(value,1)  ),
         color = c("#1a6ecc70", "#90ed7d60" ) ) %>%
   hc_legend(title=list(text="Clic pour voir France ou BFC" )) %>%
   hc_add_theme(thm) 
@@ -337,17 +368,20 @@ club_reg %>%
               slice(93:116)  ,
             by="Code fédération" )  %>%
   mutate(`licences/clubs` = color_bar('lightgreen',na.rm=T)
-       (digits(Licences / France ,1,decimal.mark=","))) %>%
+        (digits(Licences / France ,1,decimal.mark=","))) %>%
 
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="clrrrrrrrrrrrrrrrl",
-      escape = F) %>% 
+      align="clrrrrrrrrrrrrrrrl", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
   add_header_above(c(" "=2,"Code région"=13," "=3) )%>%
-  column_spec(5, bold=T, background = "#E0FFFF75",  color = "steelblue") %>%
-  column_spec(16, bold=T) %>%
-  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", general_title = "Source : ",
-           number = c("F= Fédération \n","FF = Fédération Française"), footnote_as_chunk = T) %>%
+  column_spec(5, 
+              bold=T, background = "#E0FFFF75",  color = "steelblue") %>%
+  column_spec(16, 
+              bold=T) %>%
+  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", 
+           general_title = "Source : ",
+           number = c("F= Fédération \n","FF = Fédération Française"), 
+           footnote_as_chunk = T) %>%
   scroll_box(height = "400px") 
 
 ```
@@ -357,11 +391,12 @@ club_reg %>%
 hchart(club_reg  %>% 
          select(fede=2,bfc="27",FR="...22") %>% 
          slice(93:117) %>%
-         mutate(txBFC=100*bfc/sum(bfc,na.rm=T), txFrance=100*FR/sum(FR,na.rm=T) ) %>% 
+         mutate(txBFC=100*bfc/sum(bfc,na.rm=T), 
+                txFrance=100*FR/sum(FR,na.rm=T) ) %>% 
          select(-2,-3) %>% 
          arrange(desc(txBFC))  %>%
          pivot_longer(!fede ,names_to = "REG")  ,
-       "treemap",  hcaes(x=fede, group = REG, value=round(value,1)  ),
+"treemap",  hcaes(x=fede, group = REG, value=round(value,1)  ),
         color = c("#1a6ecc70", "#90ed7d60" ) ) %>%
   hc_legend(title=list(text="Clic pour voir France ou BFC" )) %>%
   hc_add_theme(thm) 
@@ -392,9 +427,11 @@ clubdep$departement <- t(as.data.frame(levels(club_dep)[4:99]))
 
 clubdep <- clubdep %>% 
               rownames_to_column(var="dep") %>%
-              mutate (dep=ifelse(nchar(dep)==1,paste0('0',dep),dep), V1=as.numeric(V1)) %>%
+              mutate (dep=ifelse(nchar(dep)==1,paste0('0',dep),dep), 
+                      V1=as.numeric(V1)) %>%
               left_join(.,depwgs@data %>% 
-                          dplyr::select(dep=INSEE_DEP,pop),by="dep" ) %>%
+                          dplyr::select(dep=INSEE_DEP,pop),
+                        by="dep" ) %>%
               adorn_totals("row",name = "FR") %>%
               mutate(txclub=round(10000*V1/pop,1)) 
 
@@ -403,15 +440,17 @@ clubdep[97,3] <- "France"
 hchart(clubdep %>% 
          slice(-97) %>% 
          arrange(desc(V1)),
-  "bar", hcaes(x=reorder(departement,V1),y=V1,
+  "bar",hcaes(x=reorder(departement,V1),y=V1,
                color=ifelse(dep %in% depbfc,"#6a5acd","#ffd700") ),
-          showInLegend = T, name = "Nombre de clubs", pointWidth = 1) %>%
+        showInLegend = T,  pointWidth = 1,
+        name = "Nombre de clubs") %>%
   hc_add_series(clubdep %>% 
                   filter(dep %in% depbfc) %>% 
                   arrange(desc(V1)),
-           "bar", hcaes(x=reorder(departement,V1),y=V1) ,
-                  color="#6a5acd" ,
-                  showInLegend = F, name = "Nombre de clubs", pointWidth = 3) %>%
+        "bar", hcaes(x=reorder(departement,V1),y=V1) ,
+               color="#6a5acd" , 
+               showInLegend = F, pointWidth = 3,
+               name = "Nombre de clubs") %>%
   hc_legend(title=list(text=" France/BFC (Clic pour zoomer) " )) %>%
   hc_xAxis(title=list(text="Départements")) %>%
   hc_yAxis(title=list(text="Nombre de clubs sportifs")) %>%
@@ -427,16 +466,18 @@ hchart(clubdep %>%
 
 hchart(clubdep %>% 
          arrange(desc(txclub)),
-  "bar", hcaes(x=reorder(departement,txclub),y=txclub,
-               color=ifelse(dep %in% depbfc,"#6a5acd",
-                     ifelse(dep=="FR","#ff7f50","#ffd700") ) ),
-          showInLegend = T, name = "Taux de clubs / 10 000", pointWidth = 1) %>%
+"bar", hcaes(x=reorder(departement,txclub),y=txclub,
+             color=ifelse(dep %in% depbfc,"#6a5acd",
+                   ifelse(dep=="FR","#ff7f50","#ffd700") ) ),
+       showInLegend = T,  pointWidth = 1,
+       name = "Taux de clubs / 10 000") %>%
   hc_add_series(clubdep %>% 
                   filter(dep %in% depbfc | dep == "FR" ) %>% 
                   arrange(desc(txclub)),
-           "bar", hcaes(x=reorder(departement,txclub),y=txclub,
-                        color=ifelse(dep %in% depbfc,"#6a5acd","#ff7f50") ),
-                  showInLegend = F, name = "Nombre de clubs", pointWidth = 3) %>%
+         "bar", hcaes(x=reorder(departement,txclub),y=txclub,
+                      color=ifelse(dep %in% depbfc,"#6a5acd","#ff7f50") ),
+                showInLegend = F,  pointWidth = 3,
+                name = "Nombre de clubs") %>%
   hc_legend(title=list(text=" France/BFC (Clic pour zoomer) " )) %>%
   hc_xAxis(title=list(text="Départements")) %>%
   hc_yAxis(title=list(text="Taux de clubs sportifs (/ 10 000)")) %>%
@@ -479,8 +520,9 @@ leaflet(cartosportdep) %>%
                                   select(Région=LIBGEO,pop,clubs_tot) %>%
                                   mutate(`Taux de clubs`=10000*clubs_tot/pop),
                                 feature.id=F,row.numbers = F)) %>%
-  addLegend( position = "bottomright",pal = pal2 ,title = "taux de clubs sportifs",
-             values = 10000*(cartosportdep$clubs_tot/cartosportdep$pop) )
+  addLegend( pal = pal2 , values = 10000*(cartosportdep$clubs_tot/cartosportdep$pop),
+             position = "bottomright", title = "taux de clubs sportifs" )
+
 ```
 
 Row {.tabset .tabset-fade .tabset-pills data-height="400"}
@@ -522,11 +564,15 @@ club_dep %>%
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
       align="crrrrrrl", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  row_spec(9, bold=T, background = "#E0FFFF75",  color = "steelblue") %>%
-  column_spec(6, bold=T) %>%
+  row_spec(9, 
+           bold=T, background = "#E0FFFF75",  color = "steelblue") %>%
+  column_spec(6, 
+              bold=T) %>%
   add_header_above(c( " "=2,"Fédérations"=3," "=3) ) %>%
-  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", general_title = "Source : ",
-           number = c("F= Fédération \n","FF = Fédération Française"), footnote_as_chunk = T) %>%
+  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", 
+           general_title = "Source : ",
+           number = c("F= Fédération \n","FF = Fédération Française"), 
+           footnote_as_chunk = T) %>%
   scroll_box(height = "350px") 
 
 ```
@@ -544,11 +590,11 @@ hchart( club_dep %>%
                       filter(NIVGEO=="DEP") %>%
                       select(CODGEO,département=LIBGEO),
                     by=c("DEP"="CODGEO") ) , 
-  "bar",  hcaes(x = fct_rev(département), 
-                y = as.numeric(clubs),
-                group = type_fede  ) ,
-          stacking = "normal" ,
-          showInLegend = T,  pointWidth =20) %>%
+  "bar", hcaes(x = fct_rev(département), 
+               y = as.numeric(clubs),
+               group = type_fede  ) ,
+         stacking = "normal" ,
+         showInLegend = T,  pointWidth =20) %>%
   hc_xAxis(title=list(text="Départements")) %>%
   hc_yAxis(title=list(text="Nombre de clubs")) %>%
   hc_add_theme(thm) 
@@ -569,11 +615,11 @@ hchart( club_dep %>%
                       filter(NIVGEO=="DEP") %>%
                       select(CODGEO,département=LIBGEO),
                     by=c("DEP"="CODGEO") ) , 
-  "bar",  hcaes(x = fct_rev(département),  
+  "bar", hcaes(x = fct_rev(département),  
                 y = as.numeric(clubs),
                 group = type_fede ) ,
-          stacking = "percent" ,
-          showInLegend = T,  pointWidth =20) %>%
+         stacking = "percent" ,
+         showInLegend = T,  pointWidth =20) %>%
   hc_xAxis(title=list(text="Départements")) %>%
   hc_yAxis(title=list(text="Proportion de clubs")) %>%
   hc_add_theme(thm) 
@@ -608,11 +654,14 @@ club_dep %>%
         (digits(na_if(Licences/BFC,Inf) ,1,decimal.mark=","))) %>% #correction de valeur infinie
   
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="lcrrrrrrrrrrl", escape = F) %>% 
+        align="lcrrrrrrrrrrl", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  column_spec(11, bold=T) %>%
-  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", general_title = "Source : ",
-           number = c("F= Fédération \n","FF = Fédération Française"), footnote_as_chunk = T) %>%
+  column_spec(11, 
+              bold=T) %>%
+  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", 
+           general_title = "Source : ",
+           number = c("F= Fédération \n","FF = Fédération Française"), 
+           footnote_as_chunk = T) %>%
   scroll_box(height = "400px") 
 
 ```
@@ -643,11 +692,14 @@ club_dep %>%
           (digits(ifelse(BFC!=0,Licences /BFC,NA) ,1,decimal.mark=","))) %>%
   
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="lcrrrrrrrrrrl", escape = F) %>% 
+        align="lcrrrrrrrrrrl", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  column_spec(11, bold=T) %>%
-  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", general_title = "Source : ",
-           number = c("F= Fédération \n","FF = Fédération Française"), footnote_as_chunk = T) %>%
+  column_spec(11, 
+              bold=T) %>%
+  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", 
+           general_title = "Source : ",
+           number = c("F= Fédération \n","FF = Fédération Française"), 
+           footnote_as_chunk = T) %>%
   scroll_box(height = "400px") 
 
 ```
@@ -678,9 +730,12 @@ club_dep %>%
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
       align="lcrrrrrrrrrrl", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  column_spec(11, bold=T) %>%
-  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", general_title = "Source : ",
-           number = c("F= Fédération \n","FF = Fédération Française"), footnote_as_chunk = T) %>%
+  column_spec(11, 
+              bold=T) %>%
+  footnote(general = " MEDES recensement des licences sportives et des clubs 2021", 
+           general_title = "Source : ",
+           number = c("F= Fédération \n","FF = Fédération Française"), 
+           footnote_as_chunk = T) %>%
   scroll_box(height = "400px") 
 
 ```
@@ -697,7 +752,8 @@ Row {.tabset .tabset-fade }
 
 ```{r,echo=F}
 lic27epci %>%
-  select(EPCI,LIBGEO,`nombre de clubs`=total_clubs,`nombre de licences` = licences, txclub, txlic, liclub)  %>% 
+  select(EPCI,LIBGEO,`nombre de clubs`=total_clubs,`nombre de licences` = licences, 
+         txclub, txlic, liclub)  %>% 
   arrange(desc(`nombre de clubs`)) %>%
   mutate(clubs = color_bar('gold')
         (digits(txclub ,1,decimal.mark=","))) %>%
@@ -708,11 +764,13 @@ lic27epci %>%
   select(-5,-6,-7) %>%
   
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="lcrrlll", escape = F) %>% 
+        align="lcrrlll", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
   add_header_above(c(" "=4,"Taux"=2," ")) %>%
-  footnote(general = " MEDES recensement des licences sportives et des clubs 2019", general_title = "Source : ",
-           number = c("F= Fédération \n","FF = Fédération Française"), footnote_as_chunk = T) %>%
+  footnote(general = " MEDES recensement des licences sportives et des clubs 2019", 
+           general_title = "Source : ",
+           number = c("F= Fédération \n","FF = Fédération Française"), 
+           footnote_as_chunk = T) %>%
   scroll_box(height = "800px") 
 ```
 
@@ -726,7 +784,8 @@ club_epci <- sp::merge(epciwgs,lic27epci %>%
                          mutate_at(3:7,as.numeric),
                        by="CODE_EPCI")
 
-leaflet(club_epci) %>%  addProviderTiles(providers$CartoDB.Positron) %>%
+leaflet(club_epci) %>%  
+  addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
   addPolygons(color = "#2F4F4F", weight = 2,opacity = 0.6,
               fill = F ) %>%
@@ -750,8 +809,8 @@ leaflet(club_epci) %>%  addProviderTiles(providers$CartoDB.Positron) %>%
                                   mutate(liclub = color_tile('white','lightgreen',alpha=0.5)
                                         (digits(liclub ,1,decimal.mark=","))),
                                 feature.id=F,row.numbers = F) ) %>%
-  addLegend( position = "bottomright",pal = pal2 ,values = ~txclub,
-             title = "taux de clubs")
+  addLegend( pal = pal2 ,values = ~txclub,
+             position = "bottomright", title = "taux de clubs")
 
 ```
 
@@ -785,8 +844,8 @@ leaflet(club_epci) %>%
                                   mutate(liclub = color_tile('white','lightgreen',alpha=0.5)
                                         (digits(liclub ,1,decimal.mark=","))),
                                 feature.id=F,row.numbers = F) ) %>%
-addLegend( position = "bottomright",pal = pallic ,values = ~txclub,
-           title = "taux de pénétration sportive" )
+addLegend( pal = pallic ,values = ~txclub,
+           position = "bottomright", title = "taux de pénétration sportive" )
 ```
 
 
@@ -813,11 +872,13 @@ lic27bv %>%
   select(-5,-6,-7)%>%
   
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="lcrrlll", escape = F) %>% 
+        align="lcrrlll", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
   add_header_above(c(" "=4,"Taux"=2," ")) %>%
-  footnote(general = " MEDES recensement des licences sportives et des clubs 2019", general_title = "Source : ",
-           number = c("F= Fédération \n","FF = Fédération Française"), footnote_as_chunk = T) %>%
+  footnote(general = " MEDES recensement des licences sportives et des clubs 2019", 
+           general_title = "Source : ",
+           number = c("F= Fédération \n","FF = Fédération Française"), 
+           footnote_as_chunk = T) %>%
   scroll_box(height = "800px") 
 ```
 
@@ -855,8 +916,8 @@ leaflet(club_bv) %>%
                                   mutate(liclub = color_tile('white','lightgreen',alpha=0.5)
                                         (digits(liclub ,1,decimal.mark=","))),
                                 feature.id=F,row.numbers = F) ) %>%
-addLegend( position = "bottomright",pal = pal2 ,values = ~txclub,
-           title = "taux de clubs")
+addLegend( pal = pal2 ,values = ~txclub,
+           position = "bottomright", title = "taux de clubs")
 
 ```
 
@@ -890,8 +951,8 @@ leaflet(club_bv) %>%
                                   mutate(liclub = color_tile('white','lightgreen',alpha=0.5)
                                         (digits(liclub ,1,decimal.mark=","))),
                                 feature.id=F,row.numbers = F) ) %>%
-addLegend( position = "bottomright",pal = pallic ,values = ~txclub,
-           title = "taux de pénétration sportive" )
+addLegend( pal = pallic ,values = ~txclub,
+           position = "bottomright", title = "taux de pénétration sportive" )
 ```
 
 
