--- a/5.3_nature.Rmd
+++ b/5.3_nature.Rmd
@@ -101,18 +101,26 @@ Row {.tabset .tabset-fade .tabset-pills data-height="800"}
 **9e** région de France en nombre de sites de sport de nature.
 
 ```{r}
-nature %>% group_by(REG) %>% summarise(`sites de nature`=n() )  %>%
-  arrange(desc(`sites de nature`)) %>% adorn_totals("row") %>% 
-  left_join(.,appartenance %>% dplyr::filter (NIVGEO=="REG") %>% dplyr::select (2,3),by=c("REG"="CODGEO")) %>%
+nature %>% 
+  group_by(REG) %>% 
+  summarise(`sites de nature`=n() )  %>%
+  arrange(desc(`sites de nature`)) %>% 
+  adorn_totals("row") %>% 
+  left_join(.,appartenance %>% 
+              dplyr::filter (NIVGEO=="REG") %>% 
+              dplyr::select (2,3),
+            by=c("REG"="CODGEO")) %>%
   relocate(région=LIBGEO,.after=REG) %>%
+  
  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="lcrrrrrrrrr",
-      escape = F) %>% 
+      align="lcrrrrrrrrr", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
 #  column_spec(11, bold=T) %>%
-  row_spec(9,background = "#E0FFFF75",  bold = T , color = "steelblue") %>%
+  row_spec(9,
+           background = "#E0FFFF75",  bold = T , color = "steelblue") %>%
 #  row_spec(nrow(region_tab),bold = T,color = "navy") %>%
-  footnote(general = "MEDES, recensement des équipempents sportifs 2020", general_title = "Source : ",
+  footnote(general = "MEDES, recensement des équipempents sportifs 2020", 
+           general_title = "Source : ",
            footnote_as_chunk = T)
 ```
 ### Comparaisons départementales
@@ -121,32 +129,48 @@ La Côte-d'Or, la Saône et Loire, l'Yonne et le Terrtoire de Belfort peu dotée
 
 ```{r}
 
-hchart(nature %>% group_by(DEP) %>% summarise(`sites de nature`=n() )  %>%  arrange(desc(`sites de nature`)) %>%
-         left_join(.,appartenance %>% dplyr::filter (NIVGEO=="DEP") %>% dplyr::select (2,3),by=c("DEP"="CODGEO")) %>%
-  relocate(département=LIBGEO,.after=DEP) 
-       ,
-       "bar", hcaes(x=reorder(département,`sites de nature`),y=`sites de nature`,color=ifelse(DEP %in% depbfc,"#6a5acd",
-                                                                 ifelse(DEP=="FR","#ff7f50","#ffd700") ) ), 
-       showInLegend = F, name = "Sites de nature", pointWidth = 1) %>%
-    hc_xAxis(title=list(text="Départements")) %>%
-    hc_yAxis(title=list(text="Nombre de sites de nature")) %>%
+hchart(nature %>% 
+         group_by(DEP) %>% 
+         summarise(`sites de nature`=n() )  %>%  
+         arrange(desc(`sites de nature`)) %>%
+         left_join(.,appartenance %>% 
+                     dplyr::filter (NIVGEO=="DEP") %>% 
+                     dplyr::select (2,3),
+                   by=c("DEP"="CODGEO")) %>%
+         relocate(département=LIBGEO,.after=DEP) ,
+"bar", hcaes(x=reorder(département,`sites de nature`),
+                    y=`sites de nature`,
+                    color=ifelse(DEP %in% depbfc,"#6a5acd",
+                          ifelse(DEP=="FR","#ff7f50","#ffd700") ) ), 
+       showInLegend = F, pointWidth = 1, 
+       name = "Sites de nature") %>%
+  hc_xAxis(title=list(text="Départements")) %>%
+  hc_yAxis(title=list(text="Nombre de sites de nature")) %>%
   hc_add_theme(thm) 
 
 ```
 
 ### Comparaisons infra régionales
 ```{r}
-nature%>% filter(REG=='27') %>% group_by(DEP) %>%  summarise(`sites de nature`=n() )  %>%
-  arrange(desc(`sites de nature`)) %>% adorn_totals("row") %>%
-  left_join(.,appartenance %>% dplyr::filter (NIVGEO=="DEP") %>% dplyr::select (2,3),by=c("DEP"="CODGEO")) %>%
+nature %>% 
+  filter(REG=='27') %>% 
+  group_by(DEP) %>%  
+  summarise(`sites de nature`=n() )  %>%
+  arrange(desc(`sites de nature`)) %>% 
+  adorn_totals("row") %>%
+  left_join(.,appartenance %>% 
+              dplyr::filter (NIVGEO=="DEP") %>% 
+              dplyr::select (2,3),
+            by=c("DEP"="CODGEO")) %>%
   relocate(département=LIBGEO,.after=DEP) %>%
- kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="lcrrrrrrrrr",
-      escape = F) %>% 
+  
+  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
+      align="lcrrrrrrrrr", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
 #  column_spec(11, bold=T) %>%
 #  row_spec(nrow(region_tab),bold = T,color = "navy") %>%
-  footnote(general = "MEDES, recensement des équipempents sportifs 2020", general_title = "Source : ",
+  footnote(general = "MEDES, recensement des équipempents sportifs 2020", 
+           general_title = "Source : ",
            footnote_as_chunk = T)
 ```
 
@@ -155,14 +179,19 @@ nature%>% filter(REG=='27') %>% group_by(DEP) %>%  summarise(`sites de nature`=n
 Une grande majorité de site de sport de nature de la région sont des boucles de randonnée.
 
 ```{r}
-nature27 %>% filter (REG=="27") %>% group_by(EquipementFamille,EquipementTypeLib) %>% summarise(`nombre de sites`=n()) %>% arrange(desc(`nombre de sites`),.by_group = T) %>%
-   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="crrrrrrrrr",
-      escape = F) %>% 
+nature27 %>% 
+  filter (REG=="27") %>% 
+  group_by(EquipementFamille,EquipementTypeLib) %>% 
+  summarise(`nombre de sites`=n()) %>% 
+  arrange(desc(`nombre de sites`),.by_group = T) %>%
+  
+  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
+      align="crrrrrrrrr", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
 #  column_spec(11, bold=T) %>%
 #  row_spec(nrow(region_tab),bold = T,color = "navy") %>%
-  footnote(general = "MEDES, recensement des équipempents sportifs 2020", general_title = "Source : ",
+  footnote(general = "MEDES, recensement des équipempents sportifs 2020", 
+           general_title = "Source : ",
            footnote_as_chunk = T) %>%
    scroll_box(height = "800px") 
 
@@ -182,9 +211,9 @@ depnature27 <- spread(depnature27,Var2,Freq)
 dep27carto <- merge(dep27carto,depnature27,by.x="INSEE_DEP",by.y="Var1")
 
 l <- leaflet() %>% 
-  setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
-   addProviderTiles(providers$OpenTopoMap) %>%
-  addProviderTiles(providers$WaymarkedTrails.hiking ) 
+        setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
+        addProviderTiles(providers$OpenTopoMap) %>%
+        addProviderTiles(providers$WaymarkedTrails.hiking ) 
 
 names(nature27.df) %>%
   purrr::walk( function(df) {
@@ -202,12 +231,14 @@ names(nature27.df) %>%
 
 
 l %>%
- addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 2) %>%
-  addLayersControl(
-    overlayGroups = names(nature27.df),
-    options = layersControlOptions(collapsed = FALSE)
-  )
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB", weight = 5, opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 3,opacity = 1, 
+              fill = F, smoothFactor = 2) %>%
+  addLayersControl(overlayGroups = names(nature27.df),
+                   options = layersControlOptions(collapsed = FALSE)  )
 
 ```
 
@@ -223,9 +254,9 @@ depnature27 <- spread(depnature27,Var2,Freq)
 dep27carto <- merge(dep27carto,depnature27,by.x="INSEE_DEP",by.y="Var1")
 
 l <- leaflet() %>% 
-  setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
-   addProviderTiles(providers$OpenTopoMap) %>%
-  addProviderTiles(providers$WaymarkedTrails.hiking) 
+        setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
+        addProviderTiles(providers$OpenTopoMap) %>%
+        addProviderTiles(providers$WaymarkedTrails.hiking) 
 
 
 names(nature27.df) %>%
@@ -244,12 +275,14 @@ names(nature27.df) %>%
 
 
 l %>%
- addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 2) %>%
-  addLayersControl(
-    overlayGroups = names(nature27.df),
-    options = layersControlOptions(collapsed = FALSE)
-  )
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 3,opacity = 1, 
+              fill = F, smoothFactor = 2) %>%
+  addLayersControl(overlayGroups = names(nature27.df),
+                   options = layersControlOptions(collapsed = FALSE) )
 
 ```
 
